@@ -17,6 +17,7 @@
   - Interface must have only one method
   - fix mortal stack bug. mortal stack is extended to count of PUSH_MORTAL opcode
   - fix array init type bug
+  - fix type semantics. Can't assign Class[] to object[]
 0.0369 2018-09-08
   - fix hash key buffer memory bug.
   - rename SPVM::Build to SPVM::Builder
